--- a/_config.yml
+++ b/_config.yml
@@ -11,17 +11,17 @@ safe: true
 
 
 # edit here to achieve your personal greatness
-url: http://username.github.io/
+url: https://eperg.github.io/
 baseurl: /sustain/
-title: Chris Turner
-author: Chris Turner
+title: Eper Gaboni
+author: Eper Gaboni
 description: Personal blog and resume
 avatar: me.jpg
-email: yourname@email.com
-github: jekyller/sustain # username
-twitter: username
-linkedin: username
-stackoverflow: username   #e.g: users/2735833/proton1h1
+email: hello@epergabonil.com
+github: eperg # username
+twitter: epergaboni
+linkedin: epergaboni
+
 #Comment out if you don't want disqus
 disqus: username
 google_analytics: UA-69391421-1
