--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Eper Gaboni
 author: Eper Gaboni
 description: Personal blog and resume
 avatar: me.jpg
-email: hello@epergabonil.com
+email: hello@epergaboni.com
 github: eperg # username
 twitter: epergaboni
 linkedin: epergaboni
