--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ safe: true
 
 # edit here to achieve your personal greatness
 url: https://eperg.github.io/
-baseurl: /sustain/
+baseurl: /eper/
 title: Eper Gaboni
 author: Eper Gaboni
 description: Personal blog and resume
